# -

./: .env.example  .gitignore  AGENTS.md  README.md  ai-daily-news-bundle.git  ai-daily-news-preview.html  index.html  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  monthly.yml  weekly.yml
config/: sources.yaml
daily/: 2026-02-26.html  2026-02-27.html  2026-02-28.html  2026-03-02.html  2026-03-03.html  2026-03-08.html  2026-03-12.html  2026-03-13.html  2026-03-16.html  2026-03-17.html  2026-03-21.html  2026-03-22.html  2026-03-23.html  2026-03-24.html  2026-03-25.html  2026-03-27.html
data/: monitor.db
data/csv/: curated_2026-02-26.csv  curated_2026-02-27.csv  curated_2026-02-28.csv  curated_2026-03-01.csv  curated_2026-03-02.csv  curated_2026-03-03.csv  curated_2026-03-04.csv  curated_2026-03-05.csv  curated_2026-03-06.csv  curated_2026-03-07.csv  curated_2026-03-08.csv  curated_2026-03-09.csv  curated_2026-03-10.csv  curated_2026-03-11.csv  curated_2026-03-12.csv  curated_2026-03-13.csv  curated_2026-03-14.csv  curated_2026-03-15.csv  curated_2026-03-16.csv  curated_2026-03-17.csv  raw_2026-02-26.csv  (+43 more)
docs/: index.html
elite/: 2026-02-26.html  2026-03-01.html  2026-03-03.html  2026-03-06.html  2026-03-08.html  2026-03-20.html  2026-03-21.html  2026-03-22.html  2026-03-24.html  2026-03-25.html  2026-03-26.html  2026-03-27.html  2026-03-29.html
monthly/: 2026-02.html
site/: index.html
src/: __init__.py  main.py
templates/: base.html  daily.html  index.html  monthly.html  weekly.html
weekly/: 2026-W10.html  2026-W11.html  2026-W12.html
(+91 files in other folders)
