[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "future-industry-weekly-post"
version = "0.1.0"
description = "Future Industry Weekly Post automation"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
fiw-collect = "fiw.cli:collect"
fiw-build-daily = "fiw.cli:build_daily"
fiw-build-weekly = "fiw.cli:build_weekly"
fiw-serve = "fiw.cli:serve"
fiw-push-weekly = "fiw.cli:push_weekly"
